# nss_wrapper

./: .clang_complete  AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  README  README.install  TODO  config.h.cmake  nss_wrapper-config.cmake.in  nss_wrapper.pc.cmake
cmake/Modules/: DefineCompilerFlags.cmake
doc/: CMakeLists.txt  README  nss_wrapper.1  nss_wrapper.1.txt
src/: CMakeLists.txt  nss_wrapper.c
tests/: CMakeLists.txt  group.in  hosts.in  nss_nwrap.c  passwd.in  shadow.in  test_getaddrinfo.c  test_gethostby_name_addr.c  test_gethostent.c  test_getnameinfo.c  test_nwrap_disabled.c  test_nwrap_vector.c  test_shadow.c  testsuite.c  valgrind.supp
